; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sof/intel/extr_byt.c_byt_reset.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sof/intel/extr_byt.c_byt_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_sof_dev = type { i32 }

@BYT_DSP_BAR = common dso_local global i32 0, align 4
@SHIM_CSR = common dso_local global i32 0, align 4
@SHIM_BYT_CSR_RST = common dso_local global i32 0, align 4
@SHIM_BYT_CSR_VECTOR_SEL = common dso_local global i32 0, align 4
@SHIM_BYT_CSR_STALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_sof_dev*)* @byt_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @byt_reset(%struct.snd_sof_dev* %0) #0 {
  %2 = alloca %struct.snd_sof_dev*, align 8
  store %struct.snd_sof_dev* %0, %struct.snd_sof_dev** %2, align 8
  %3 = load %struct.snd_sof_dev*, %struct.snd_sof_dev** %2, align 8
  %4 = load i32, i32* @BYT_DSP_BAR, align 4
  %5 = load i32, i32* @SHIM_CSR, align 4
  %6 = load i32, i32* @SHIM_BYT_CSR_RST, align 4
  %7 = load i32, i32* @SHIM_BYT_CSR_VECTOR_SEL, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @SHIM_BYT_CSR_STALL, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @SHIM_BYT_CSR_RST, align 4
  %12 = load i32, i32* @SHIM_BYT_CSR_VECTOR_SEL, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @SHIM_BYT_CSR_STALL, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @snd_sof_dsp_update_bits64(%struct.snd_sof_dev* %3, i32 %4, i32 %5, i32 %10, i32 %15)
  %17 = call i32 @usleep_range(i32 10, i32 15)
  %18 = load %struct.snd_sof_dev*, %struct.snd_sof_dev** %2, align 8
  %19 = load i32, i32* @BYT_DSP_BAR, align 4
  %20 = load i32, i32* @SHIM_CSR, align 4
  %21 = load i32, i32* @SHIM_BYT_CSR_RST, align 4
  %22 = call i32 @snd_sof_dsp_update_bits64(%struct.snd_sof_dev* %18, i32 %19, i32 %20, i32 %21, i32 0)
  ret i32 0
}

declare dso_local i32 @snd_sof_dsp_update_bits64(%struct.snd_sof_dev*, i32, i32, i32, i32) #1

declare dso_local i32 @usleep_range(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
